@@ -9,6 +9,7 @@ fixed bugs:
 - the AMPL interface now writes a solve status (solve_result_num) into the .sol file
 - fix wrong propagation of product expressions
 - fix memory leaks in TSP example
+- return SCIP_ERROR when a memory exception is caught in SoPlex (was SCIP_LPERROR)
 
 performance improvements:
 - improve propagation of absolute-value expression in the case that the sign of the argument is fixed
